centered the joystick

--- a/player.html
+++ b/player.html
@@ -5,11 +5,20 @@
 <script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.7.2.min.js"></script>
 <style>
 #container{
-	border: 1px solid black;
 	width:400px;
 	height:400px;
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    bottom: 25%;
+    right:25%;
+    margin-top: -50px;
+    margin-left: -50px;
 }
-#pos_left #pos_top{
+#pos_left{
+	display:none;
+}
+#pos_top{
 	display:none;
 }
 </style>
