--- a/game/index.html
+++ b/game/index.html
@@ -1,4 +1,5 @@
 <canvas id="canvas" width="450" height="450"></canvas>
 
+    <script src='https://cdn.firebase.com/v0/firebase.js'></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script src="game.js" type="text/javascript"></script>
