--- a/game/index.html
+++ b/game/index.html
@@ -1,4 +1,6 @@
-<canvas id="canvas" width="450" height="450"></canvas>
+		<canvas id="team1" class="thumbstick" width="300" height="200" style="border:1px solid #000;">Your browser does not support the HTML5 canvas tag.</canvas>
+					<canvas id="team2" class="thumbstick" width="300" height="200" style="border:1px solid #000;">Your browser does not support the HTML5 canvas tag.</canvas>
+<canvas id="game" width="450" height="450"></canvas>
 
     <script src='https://cdn.firebase.com/v0/firebase.js'></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
