--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Github Page
+		<canvas id="team1" class="thumbstick" width="300" height="200" style="border:1px solid #000;">Your browser does not support the HTML5 canvas tag.</canvas>
+					<canvas id="team2" class="thumbstick" width="300" height="200" style="border:1px solid #000;">Your browser does not support the HTML5 canvas tag.</canvas>
+<canvas id="game" width="450" height="450"></canvas>
+
+    <script src='https://cdn.firebase.com/v0/firebase.js'></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script src="game.js" type="text/javascript"></script>
